2008-06-09  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-note.c
	Added new transfer_window and close_if_pressed_outside private
	attributes.
	(hildon_note_rebuild):
	Don't add a cancel button to the information note. It will be
	closed when tapping outside
	(hildon_note_realize):
	Set the notification type hint
	(hildon_note_map, hildon_note_unmap, grab_transfer_window_get):
	Grab/ungrab pointer and keyboard if the note has to be closed when
	tapping outside
	(hildon_note_button_release):
	Close the note when tapping outside (if applicable)

	* src/hildon-app-menu.c
	Grab/ungrab pointer and keyboard on map/unmap
	(hildon_app_menu_button_release, hildon_app_menu_class_init):
	Close the menu on button release, not button press

	* src/hildon-banner.c
	(hildon_banner_set_property)
	(hildon_banner_check_position):
	Make the banner use the full width of the screen
	(hildon_banner_show_information)
	(hildon_banner_show_information_with_markup):
	Don't display an icon by default

2008-06-09  Alejandro G. Castro <alex@igalia.com>

	Added fading scrollbars and adapted all the overshooting code to
	horizontal scrolling. We have also fixed bugs with overshooting
	and current fading implementation.
		
	* src/hildon-pannable-area.c
	(hildon_pannable_area_scroll_indicator_fade): Time out function
	used to change the transparency of the scrollbars.
	
	(hildon_pannable_area_button_press_cb): Added horizontal overshot
	control and fixed a problem with fading, we now remove the fade
	timeout before adding a new one.
	
	(hildon_pannable_axis_scroll):
	(hildon_pannable_area_scroll):
	(hildon_pannable_area_timeout): Added this functions so we can use
	the scroll code both for vertical and horizontal.
	
	(hildon_pannable_area_motion_notify_cb):
	(hildon_pannable_area_button_release_cb): Added the horizontal
	scrolling control, fixed a problem with the overshooting timeout.

	(rgb_from_gdkcolor): Added this function, it is used in the cairo
	painting of the scrolls.
	